refactor: standardize API response DTOs, implement validation, and add system architecture documentation